added delete user for admin
